environments/example-es-truststore/services/ordercommandms/base/config/deployment.yaml
---
# Source: ordercommandms/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "ordercommandms-deployment"
  labels:
    chart: 'ordercommandms-1.0.0'
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: "ordercommandms-selector"
  template:
    metadata:
      labels:
        app: "ordercommandms-selector"
        version: "current"
    spec:
      serviceAccountName: kcontainer-runtime
      containers:
      - name: "ordercommandms"
        image: "ibmcase/kcontainer-order-command-ms:latest"
        imagePullPolicy: Always

        readinessProbe:
          httpGet:
            path: /health
            port: 9080
          initialDelaySeconds: 20

        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
