environments/example-es-truststore/services/ordercommandms/base/config/route.yaml
---
# Source: ordercommandms/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  #TODO Add default name overrides?
  name: kcontainer-order-command
  labels:
    chart: 'ordercommandms-1.0.0'
    app.kubernetes.io/part-of: refarch-kc
spec:
  path: /
  to:
    kind: Service
    name: "order-command-ms"
    weight: 100
  port:
    targetPort: http
